# databoxer

./: Cargo.toml  README.md
.github/workflows/: build.yml  linux.yml  macos.yml  release.yml  windows.yml
src/: app.rs  lib.rs  main.rs
src/cli/: command.rs  logger.rs  mod.rs
src/cli/handlers/: base.rs  box.rs  info.rs  key.rs  mod.rs  profile.rs  unbox.rs
src/cli/io/: input.rs  mod.rs  os.rs
src/core/: error.rs  key.rs  logs.rs  mod.rs  options.rs  profile.rs  prompt.rs
src/core/app/: decrypt.rs  encrypt.rs  info.rs  keys.rs  mod.rs  profiles.rs
src/core/data/: config.rs  io.rs  keys.rs  mod.rs  profile.rs  profiles.rs
src/core/data/boxfile/: boxfile.rs  header.rs  mod.rs
src/core/encryption/: boxfile.rs  cipher.rs  mod.rs
src/core/os/: mod.rs
src/core/utils/: hex.rs  path.rs
src/utils/: hex.rs  io.rs  mod.rs  path.rs
tests/: test_cli.rs
tests/common/: mod.rs
