[package]
name = "databoxer"
version = "0.1.0-rc.1"
edition = "2021"
authors = ["Nikita Doronin <nikdorkir@gmail.com>"]
description = "Fast and easy to use CLI-based file encryption program"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/duckysmacky/databoxer"
keywords = ["security", "encryption", "cli", "data-storage"]
categories = ["command-line-utilities", "cryptography"]
exclude = ["/.github", "/.idea", "/files", "/media"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "databoxer"
path = "src/main.rs"

[dependencies]
# cli
clap = { version = "4.5.29", features = ["cargo"] }

# serialization
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
bincode = "1.3.3"
toml = "0.8.20"

# encryption
chacha20poly1305 = "0.10.1"
rand = "0.9.0"
sha2 = "0.10.8"
argon2 = "0.5.3"

# utility
uuid = { version = "1.13.1", features = ["v4", "fast-rng"] }
lazy_static = "1.5.0"
paste = "1.0.15"
chrono = "0.4.39"

# unix
[target.'cfg(unix)'.dependencies]
libc = "0.2.169"

# windows
[target.'cfg(windows)'.dependencies]
windows-sys = "0.59.0"
